Complete update of index.html with fixed structure and merged changes

--- a/index.html
+++ b/index.html
@@ -47,8 +47,109 @@
             </div>
         </section>
 
-        <!-- Rest of the sections remain the same -->
+        <section id="services">
+            <h2>Our Services</h2>
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="service-icon">📈</div>
+                    <h3>Growth Strategy</h3>
+                    <ul class="service-benefits">
+                        <li>Market Opportunity Analysis</li>
+                        <li>Competitive Positioning</li>
+                        <li>Revenue Stream Optimization</li>
+                        <li>Growth Roadmap Development</li>
+                    </ul>
+                    <a href="#contact" class="service-cta">Discuss Your Growth Goals →</a>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">⚙️</div>
+                    <h3>Process Optimization</h3>
+                    <ul class="service-benefits">
+                        <li>Operational Efficiency Audit</li>
+                        <li>Cost Reduction Strategies</li>
+                        <li>Workflow Automation</li>
+                        <li>Quality Management Systems</li>
+                    </ul>
+                    <a href="#contact" class="service-cta">Improve Your Operations →</a>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">🔄</div>
+                    <h3>Digital Transformation</h3>
+                    <ul class="service-benefits">
+                        <li>Technology Stack Assessment</li>
+                        <li>Digital Strategy Development</li>
+                        <li>System Integration</li>
+                        <li>Change Management</li>
+                    </ul>
+                    <a href="#contact" class="service-cta">Start Your Digital Journey →</a>
+                </div>
+            </div>
+        </section>
 
+        <section id="results">
+            <h2>Proven Results</h2>
+            <div class="results-grid">
+                <div class="case-study-card">
+                    <div class="company-logo">TechCorp</div>
+                    <p class="achievement">Increased revenue by 45% in 12 months</p>
+                    <p class="solution">Through market expansion strategy and operational efficiency improvements</p>
+                    <a href="#" class="read-more">Read Case Study →</a>
+                </div>
+                <div class="case-study-card">
+                    <div class="company-logo">ManufactPro</div>
+                    <p class="achievement">Reduced operational costs by 28%</p>
+                    <p class="solution">By implementing lean processes and digital transformation</p>
+                    <a href="#" class="read-more">Read Case Study →</a>
+                </div>
+                <div class="case-study-card">
+                    <div class="company-logo">ServiceMax</div>
+                    <p class="achievement">Scaled operations to 3 new markets</p>
+                    <p class="solution">With sustainable growth strategy and process optimization</p>
+                    <a href="#" class="read-more">Read Case Study →</a>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact">
+            <div class="contact-container">
+                <div class="contact-info">
+                    <h2>Let's Grow Your Business</h2>
+                    <p class="value-prop">Schedule a consultation to discuss how we can help you:</p>
+                    <ul class="benefits-list">
+                        <li>✓ Increase revenue and market share</li>
+                        <li>✓ Optimize operational efficiency</li>
+                        <li>✓ Accelerate digital transformation</li>
+                        <li>✓ Build sustainable growth systems</li>
+                    </ul>
+                    <div class="guarantee">
+                        <p>🔒 100% Confidential • No Obligation</p>
+                    </div>
+                </div>
+                <form id="contact-form" class="contact-form">
+                    <div class="form-group">
+                        <label for="name">Full Name:</label>
+                        <input type="text" id="name" name="name" required placeholder="John Smith">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Business Email:</label>
+                        <input type="email" id="email" name="email" required placeholder="john@company.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="company">Company Name:</label>
+                        <input type="text" id="company" name="company" required placeholder="Your Company Ltd.">
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Phone:</label>
+                        <input type="tel" id="phone" name="phone" required placeholder="+1 (555) 123-4567">
+                    </div>
+                    <div class="form-group">
+                        <label for="challenge">Biggest Business Challenge:</label>
+                        <textarea id="challenge" name="challenge" rows="3" required placeholder="Tell us about your main growth challenges..."></textarea>
+                    </div>
+                    <button type="submit">Book Consultation</button>
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -67,7 +168,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>© 2024 Bambino Consulting. All rights reserved.</p>
+            <p>&copy; 2024 Bambino Consulting. All rights reserved.</p>
         </div>
     </footer>
 </body>
